# Abstract-VM

./: AbstractVM  CMakeLists.txt  CreateDataType.cpp  CreateDataType.hpp  Double.cpp  Double.hpp  Float.cpp  Float.hpp  ICreateDataType.hpp  IOperand.cpp  IOperand.hpp  Int16.cpp  Int16.hpp  Int32.cpp  Int32.hpp  Int8.cpp  Int8.hpp  Makefile  Operand.cpp  Operand.hpp  OperandFactory.cpp  OperandFactory.hpp  VMExceptions.cpp  VMExceptions.hpp  VmStack.cpp  VmStack.hpp  main.cpp
Test_files/: test01.txt  test08.txt  test14.txt
Test_files/invalidTestCases/: NoExit.avm  Overflow_pushdouble.avm  Overflow_pushfloat.avm  Underflow_double.avm  Underflow_float.avm  Underflow_push16.avm  Underflow_push32.avm  div0.avm  fail_add.avm  fail_assert.avm  fail_div.avm  fail_mod.avm  fail_mul.avm  fail_print.avm  fail_sub.avm  mod0.avm  syntaxCheck.avm
operand/: DoubleOperand.cpp  DoubleOperand.hpp  FloatOperand.cpp  FloatOperand.hpp  INT16Operand.cpp  INT16Operand.hpp  INT32Operand.cpp  INT32Operand.hpp  INT8Operand.cpp  INT8Operand.hpp  IOperand.hpp  OperandFactory.cpp  OperandFactory.hpp
